fix(www): adjusted bleed box margins

--- a/packages/www/src/style/style.scss
+++ b/packages/www/src/style/style.scss
@@ -36,6 +36,8 @@
     --font-mono-letter-spacing: 0;
     --font-mono-line-height: 16px;
 
+    --scrollbar-width: 16px;
+
     --navbar-height: 4rem;
     --left-sidebar-width: 14rem;
     --right-sidebar-width: 14rem;
@@ -164,7 +166,7 @@ code {
 
 .custom-scroll {
     &::-webkit-scrollbar {
-        width: 16px;
+        width: var(--scrollbar-width);
     }
 
     // &::-webkit-scrollbar-track {
@@ -177,7 +179,7 @@ code {
 
     &::-webkit-scrollbar-thumb {
         background-color: rgba(0, 0, 0, .25);
-        border-radius: 16px;
+        border-radius: var(--scrollbar-width);
         border: 4px solid var(--theme-bg-color);
 
         &:hover {
@@ -400,8 +402,8 @@ $utilities: (
 
 .bleed-box {
     @media (min-width: 1024px) {
-        margin-left: calc(-49vw + 50%);
-        margin-right: calc(-49vw + 50%);
+        margin-left: calc(-50vw + 50% + var(--scrollbar-width) * .5);
+        margin-right: calc(-50vw + 50% + var(--scrollbar-width) * .5);
         padding: 0 0.75rem;
     }
 }
